All data transformed

--- a/Movielens_Extract.ipynb
+++ b/Movielens_Extract.ipynb
@@ -3349,7 +3349,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d95d114c",
+   "id": "195a3a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3359,7 +3359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfbd0f4b",
+   "id": "2f58707e",
    "metadata": {},
    "source": [
     "### Use a Histogram to look at the statistics of the actual ratings"
@@ -3368,7 +3368,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "965ad391",
+   "id": "c71b4901",
    "metadata": {},
    "outputs": [
     {
@@ -3410,7 +3410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6199b6",
+   "id": "3d232ada",
    "metadata": {},
    "source": [
     "###### That seems to make sense. People are more likely to give whole number ratings than half, which explains the spikes in the histogram. The median score is 3.5, the mean is 3.53, and all the ratings are between 0 and 5."
@@ -3419,7 +3419,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3193143f",
+   "id": "280cfac7",
    "metadata": {},
    "outputs": [
     {
@@ -3484,7 +3484,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "67d47bbf",
+   "id": "2dabffc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3502,7 +3502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1c85a9",
+   "id": "23eef735",
    "metadata": {},
    "source": [
     "#### Title"
@@ -3511,7 +3511,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "236f5107",
+   "id": "f1a70845",
    "metadata": {},
    "outputs": [
     {
@@ -3631,7 +3631,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b91ac1e0",
+   "id": "53e59f87",
    "metadata": {},
    "outputs": [
     {
@@ -3764,7 +3764,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "977c4d73",
+   "id": "356a5db5",
    "metadata": {},
    "outputs": [
     {
@@ -3841,7 +3841,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2488c5b3",
+   "id": "b0e8306e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015e2b10",
+   "id": "908f8e9a",
    "metadata": {},
    "source": [
     "#### Runtime"
@@ -3861,7 +3861,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3ad5bdf6",
+   "id": "ae2f2a8a",
    "metadata": {},
    "outputs": [
     {
@@ -3895,7 +3895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6e3896",
+   "id": "4410dc96",
    "metadata": {},
    "source": [
     "##### There's a lot of zeros on the y axis (Kaggle). There are more missing entries in the Wikipedia data set than in the Kaggle data set. ost of the runtimes are pretty close to each other but the Wikipedia data has some outliers, so the Kaggle data is probably a better choice. ---Keep Kaggle; fill in zeros with Wikipedia data.\n"
@@ -3904,14 +3904,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee142491",
+   "id": "3e2c3a7e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "96200a83",
+   "id": "c6d192f5",
    "metadata": {},
    "source": [
     "#### Budget"
@@ -3920,7 +3920,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "11895f58",
+   "id": "b54752d6",
    "metadata": {
     "scrolled": true
    },
@@ -3956,7 +3956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cac24a",
+   "id": "3433879a",
    "metadata": {},
    "source": [
     "##### The Wikipedia data appears to have more outliers compared to the Kaggle data. However, there are quite a few movies with no data in the Kaggle column, while Wikipedia does have budget data. Therefore, we'll fill in the gaps with Wikipedia's data."
@@ -3964,7 +3964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83dfcf5c",
+   "id": "6738f748",
    "metadata": {},
    "source": [
     "#### Box Office"
@@ -3973,7 +3973,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a331145e",
+   "id": "ef54c3b8",
    "metadata": {},
    "outputs": [
     {
@@ -4008,7 +4008,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "339a9521",
+   "id": "651369e2",
    "metadata": {},
    "outputs": [
     {
@@ -4042,7 +4042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a807f740",
+   "id": "52014f5d",
    "metadata": {},
    "source": [
     "##### Keep Kaggle; fill in zeros with Wikipedia data."
@@ -4050,7 +4050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c393ff",
+   "id": "d0e173dd",
    "metadata": {},
    "source": [
     "#### Release Date\n"
@@ -4059,7 +4059,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "ac9bf8ea",
+   "id": "890270c1",
    "metadata": {},
    "outputs": [
     {
@@ -4094,7 +4094,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "e2d753a2",
+   "id": "cb83e66f",
    "metadata": {},
    "outputs": [
     {
@@ -4211,7 +4211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd169df",
+   "id": "a8785bb1",
    "metadata": {},
    "source": [
     "##### The data got mixed so it'll be dropped. "
@@ -4220,7 +4220,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c4e1d0ee",
+   "id": "0b5e9ef0",
    "metadata": {},
    "outputs": [
     {
@@ -4242,7 +4242,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "8c2c040a",
+   "id": "d40bb17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4253,7 +4253,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4d4c0ea6",
+   "id": "c1ff5a5a",
    "metadata": {},
    "outputs": [
     {
@@ -4717,7 +4717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89f1025",
+   "id": "84b017b7",
    "metadata": {},
    "source": [
     "#####  the Kaggle data isn't missing any release dates. In this case, we'll just drop the Wikipedia data. --Drop Wikipedia."
@@ -4725,7 +4725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99b6473",
+   "id": "51724d52",
    "metadata": {},
    "source": [
     "#### Language"
@@ -4734,7 +4734,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "dbf4566d",
+   "id": "cd33fba2",
    "metadata": {},
    "outputs": [
     {
@@ -4768,7 +4768,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "162195a3",
+   "id": "6beee908",
    "metadata": {},
    "outputs": [
     {
@@ -4808,7 +4808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "460106cd",
+   "id": "1592ee99",
    "metadata": {},
    "source": [
     "##### decisions that save time are usually the ones that win, so we'll use the Kaggle data here b/c the Kaggle data is already in a consistent and usable format ---Drop Wikipedia.\n"
@@ -4816,7 +4816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b212b8ac",
+   "id": "7c3d0076",
    "metadata": {},
    "source": [
     "#### Production Companies\n"
@@ -4825,7 +4825,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "8bb552aa",
+   "id": "41258992",
    "metadata": {},
    "outputs": [
     {
@@ -4957,7 +4957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f198ea3",
+   "id": "ea6ddf7a",
    "metadata": {},
    "source": [
     "##### The Kaggle data is much more consistent, and it would be difficult, if not impossible, to translate the Wikipedia data into the same format. ---Drop Wikipedia."
@@ -4965,7 +4965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef44d7cb",
+   "id": "34bf65e8",
    "metadata": {},
    "source": [
     "## Put It All Together\n"
@@ -4973,7 +4973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c08f282",
+   "id": "338b1043",
    "metadata": {},
    "source": [
     "##### First, we'll drop the title_wiki, release_date_wiki, Language, and Production company(s) columns."
@@ -4982,7 +4982,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8c987226",
+   "id": "f0c93f75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4992,7 +4992,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "cfad2d35",
+   "id": "d432ac77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5007,7 +5007,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c69e87d0",
+   "id": "2ecec281",
    "metadata": {},
    "outputs": [
     {
@@ -5501,7 +5501,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5e03e092",
+   "id": "baaa7545",
    "metadata": {},
    "outputs": [
     {
@@ -5527,7 +5527,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0c1a9e9d",
+   "id": "20b706a1",
    "metadata": {},
    "outputs": [
     {
@@ -5548,7 +5548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8312fc1c",
+   "id": "45054735",
    "metadata": {},
    "source": [
     "##### Since it's false for every row, we don't need to include this column.\n"
@@ -5557,7 +5557,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "be46b658",
+   "id": "cde7aaee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5574,7 +5574,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "966d85a3",
+   "id": "ae7b2a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5599,9 +5599,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b040a72b",
+   "metadata": {},
+   "source": [
+    "### Transform and Merge Rating Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "1ef539eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# groupby on the \"movieId\" and \"rating\" columns and take the count for each group.\n",
+    "#  rename the \"userId\" column to \"count.\"\n",
+    "# pivot this data so that movieId is the index, the columns will be all the rating values, and the rows will be the counts for each rating value.\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "dda19b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename the columns so they're easier to understand. We'll prepend rating_ to each column with a list comprehension:\n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3dffec1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge the data. Use Left merge to keep everything in movies_df and add on the ratings data\n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "d3b6a8ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not every movie got a rating for each rating level, there will be missing values instead of zeros. We have to fill those in ourselves, like this:\n",
+    "\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ecb4a17",
+   "id": "537c62ac",
    "metadata": {},
    "outputs": [],
    "source": []
