--- a/Movielens_Extract.ipynb
+++ b/Movielens_Extract.ipynb
@@ -109,7 +109,11 @@
    "execution_count": 8,
    "id": "e5499e7b",
    "metadata": {
-    "scrolled": false
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -257,7 +261,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c0fa330d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -461,7 +471,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "e02ddcb5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -595,8 +611,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kaggle_metadata = pd.read_csv(f'{file_dir}/movies_metadata.csv', low_memory=False)\n",
-    "ratings = pd.read_csv(f'{file_dir}/ratings.csv')"
+    "kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
+    "ratings = pd.read_csv(f'{file_dir}ratings.csv')\n"
    ]
   },
   {
@@ -1188,7 +1204,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "667770fd",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -5814,7 +5836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
