--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -95,7 +95,7 @@
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load():\n",
+    "def extract_transform_load(wiki_file, kaggle_file, ratings_file):\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
     "    ratings = pd.read_csv(ratings_file)\n",
@@ -334,12 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = '/Users/Beatriz/Desktop/Classwork/Module_8/Movies-ETL/'\n",
+    "file_dir = '/Users/Beatriz/Desktop/Classwork/Module_8/Movies-ETL/Resources/' \n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}wikipedia_movies.json'\n",
     "# The Kaggle metadata\n",
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -359,67 +359,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 55.26963567733765 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 90.5455527305603 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000...Done. 132.0272707939148 total seconds elapsed\n",
-      "importing rows 3000000 to 4000000...Done. 164.64531779289246 total seconds elapsed\n",
-      "importing rows 4000000 to 5000000...Done. 201.42842984199524 total seconds elapsed\n",
-      "importing rows 5000000 to 6000000...Done. 235.81528091430664 total seconds elapsed\n",
-      "importing rows 6000000 to 7000000...Done. 270.2352628707886 total seconds elapsed\n",
-      "importing rows 7000000 to 8000000...Done. 309.4155819416046 total seconds elapsed\n",
-      "importing rows 8000000 to 9000000...Done. 346.1767249107361 total seconds elapsed\n",
-      "importing rows 9000000 to 10000000...Done. 378.10379695892334 total seconds elapsed\n",
-      "importing rows 10000000 to 11000000...Done. 413.0150158405304 total seconds elapsed\n",
-      "importing rows 11000000 to 12000000...Done. 446.9424467086792 total seconds elapsed\n",
-      "importing rows 12000000 to 13000000...Done. 493.7845129966736 total seconds elapsed\n",
-      "importing rows 13000000 to 14000000...Done. 526.5234417915344 total seconds elapsed\n",
-      "importing rows 14000000 to 15000000...Done. 558.0412368774414 total seconds elapsed\n",
-      "importing rows 15000000 to 16000000...Done. 590.924281835556 total seconds elapsed\n",
-      "importing rows 16000000 to 17000000...Done. 634.7346937656403 total seconds elapsed\n",
-      "importing rows 17000000 to 18000000...Done. 675.463292837143 total seconds elapsed\n",
-      "importing rows 18000000 to 19000000...Done. 720.6892287731171 total seconds elapsed\n",
-      "importing rows 19000000 to 20000000...Done. 771.9246487617493 total seconds elapsed\n",
-      "importing rows 20000000 to 21000000...Done. 805.834077835083 total seconds elapsed\n",
-      "importing rows 21000000 to 22000000...Done. 841.7712440490723 total seconds elapsed\n",
-      "importing rows 22000000 to 23000000...Done. 875.2604579925537 total seconds elapsed\n",
-      "importing rows 23000000 to 24000000...Done. 909.178308725357 total seconds elapsed\n",
-      "importing rows 24000000 to 25000000...Done. 945.7043609619141 total seconds elapsed\n",
-      "importing rows 25000000 to 26000000...Done. 977.9464688301086 total seconds elapsed\n",
-      "importing rows 26000000 to 26024289...Done. 978.7636218070984 total seconds elapsed\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/kc/fy3gdpt51sxg15xg1mgh75500000gp/T/ipykernel_1552/177707460.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwiki_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_transform_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+      "importing rows 0 to 1000000...Done. 78.98228406906128 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 126.83449411392212 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 164.0590500831604 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 197.28937816619873 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 228.95510625839233 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 262.7740659713745 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 293.9072699546814 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 327.55995297431946 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 358.6682450771332 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 392.9412491321564 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 424.4743711948395 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 456.6963121891022 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 487.77627515792847 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 519.710232257843 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 551.1614489555359 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 582.5728671550751 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 619.4832620620728 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 651.8313231468201 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 686.9405090808868 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 719.9553689956665 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 756.6888520717621 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 791.7335910797119 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 824.8790249824524 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 857.7085950374603 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 888.7495040893555 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 928.1765902042389 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 929.4560389518738 total seconds elapsed\n"
      ]
     }
    ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "extract_transform_load(wiki_file, kaggle_file, ratings_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 12. Set the DataFrames from the return statement equal to the file names in Step 11. \n",
-    "wiki_movies_df = wiki_file\n",
-    "movies_with_ratings_df = kaggle_file\n",
-    "movies_df = ratings_file"
+    "# # 12. Set the DataFrames from the return statement equal to the file names in Step 11. \n",
+    "# wiki_movies_df = wiki_file\n",
+    "# movies_with_ratings_df = kaggle_file\n",
+    "# movies_df = ratings_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -435,14 +424,16 @@
     }
    ],
    "source": [
-    "# 13. Check the wiki_movies_df DataFrame. \n",
-    "wiki_movies_df.type()"
+    "# # 13. Check the wiki_movies_df DataFrame. \n",
+    "# wiki_movies_df.type()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -457,8 +448,8 @@
     }
    ],
    "source": [
-    "# 14. Check the movies_with_ratings_df DataFrame.\n",
-    "movies_with_ratings_df.head()"
+    "# # 14. Check the movies_with_ratings_df DataFrame.\n",
+    "# movies_with_ratings_df.head()"
    ]
   },
   {
@@ -467,8 +458,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 15. Check the movies_df DataFrame. \n",
-    "movies_df.head()"
+    "# # 15. Check the movies_df DataFrame. \n",
+    "# movies_df.head()"
    ]
   },
   {
